[package]
name = "fact_graph"
version = "0.0.1"
authors = ["Archit Gupta <architg@uw.edu>"]
description = "Fact graph document clustering project"
readme = "README.md"
edition = "2018"

[features]
default = ["adj_matrix"]
adj_matrix = []
adj_list = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde =  "0.14.3"
rayon = "1.1"
rand = "0.7.3"
rand_pcg = "0.2.1"
rust-stemmers = "1.2.0"
itertools = "0.9.0"
ndarray = { version = "0.13.0", features = ["rayon"] }
ndarray-stats = "0.3.0"
ndarray-linalg = { version = "0.12.1", features = ["openblas"] }
rkm = { git = "https://github.com/genbattle/rkm", features = ["parallel"] }
petal-decomposition = {version = "0.4.1", default-features = false, features = ["openblas"] }
kodama = "0.2.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
